# innovation-cavefish

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Logbook.md  NOTICE.md  Readme.md  appendix.tex  babyjubjub-keygen  flake.nix  lc_main.tex  lcbib.bib  light-clients.bbl  light-clients.tex  light-clients_old.tex  model.tex
cavefish-server/cavefish/: cavefish.cabal
cavefish-server/cavefish/app/: App.hs  Main.hs
cavefish-server/cavefish/bench/: Bench.hs
cavefish-server/cavefish/client/: CHANGELOG.md  README.md  cavefish-client.cabal
cavefish-server/cavefish/client-backend/: cavefish-client-backend.cabal
cavefish-server/cavefish/client-backend/app/: Main.hs
cavefish-server/cavefish/client-backend/src/ClientBackend/: Api.hs  App.hs  Handlers.hs  Helpers.hs  Server.hs  Types.hs
cavefish-server/cavefish/client-frontend/static/: index.html
cavefish-server/cavefish/client/src/Client/: Impl.hs  Mock.hs
cavefish-server/cavefish/client/test/: Spec.hs
cavefish-server/cavefish/core/: README.md  cavefish-core.cabal
cavefish-server/cavefish/core/src/Adapter/: Logging.hs
cavefish-server/cavefish/core/src/Cavefish/Services/: TxBuilding.hs  WBPS.hs
cavefish-server/cavefish/core/src/Core/: CavefishLogEvent.hs  Cbor.hs  Intent.hs  PaymentProof.hs  Pke.hs  Proof.hs  TxAbs.hs  TxBuilder.hs
cavefish-server/cavefish/core/src/Core/Api/: AppContext.hs  Messages.hs  ServerConfiguration.hs  ServerContext.hs  State.hs
cavefish-server/cavefish/core/src/Core/Cardano/: Class.hs  MonadBlockchain.hs
cavefish-server/cavefish/core/src/Core/Observers/: Observer.hs
cavefish-server/cavefish/core/src/Core/SP/: AskCommitmentProof.hs  AskSubmission.hs  DemonstrateCommitment.hs  FetchAccount.hs  FetchAccounts.hs  Register.hs
cavefish-server/cavefish/core/src/Intent/Example/: DSL.hs  TxBuilder.hs
cavefish-server/cavefish/core/src/Prototype/: AskCommitmentProof.hs  AskSubmission.hs  Messages.hs  PaymentProof.hs  State.hs
cavefish-server/cavefish/core/test/Core/: IntentSpecs.hs
cavefish-server/cavefish/lib/Api/: Api.hs
cavefish-server/cavefish/lib/Client/: Impl.hs  Mock.hs
cavefish-server/cavefish/lib/Core/: Cbor.hs  Intent.hs  PaymentProof.hs  Pke.hs  Proof.hs  TxAbs.hs
cavefish-server/cavefish/lib/NodeClient/: NodeClient.hs
cavefish-server/cavefish/lib/Observers/: Observer.hs
cavefish-server/cavefish/lib/Sp/: App.hs  Emulator.hs  Server.hs  State.hs  TxBuilder.hs
cavefish-server/cavefish/server/: README.md  cavefish-server.cabal
cavefish-server/cavefish/server/app/: Main.hs
cavefish-server/cavefish/server/src/: Cavefish.hs
cavefish-server/cavefish/server/src/Cavefish/Api/: ServerConfiguration.hs
cavefish-server/cavefish/server/src/Cavefish/Performance/: LogEvent.hs
cavefish-server/cavefish/server/src/Cavefish/Services/: TxBuilding.hs  WBPS.hs
cavefish-server/cavefish/server/src/Intent/Example/: DSL.hs  TxBuilder.hs
cavefish-server/cavefish/server/src/Sp/: Emulator.hs  Middleware.hs  Server.hs
cavefish-server/cavefish/server/test/: Main.hs  Spec.hs
cavefish-server/cavefish/server/test/Core/: IntentDSLGen.hs  IntentSpecs.hs
cavefish-server/cavefish/src/cavefish-client/: cavefish-client.cabal
cavefish-server/cavefish/src/cavefish-client/src/Client/: Impl.hs  Mock.hs
cavefish-server/cavefish/src/cavefish-client/test/: Main.hs
cavefish-server/cavefish/src/cavefish-core/: CHANGELOG.md  cavefish-core.cabal
cavefish-server/cavefish/src/cavefish-core/src/Core/: Cbor.hs  Contex.hs  TxAbs.hs
cavefish-server/cavefish/src/cavefish-server/: CHANGELOG.md  cavefish-server.cabal
cavefish-server/cavefish/src/cavefish-server/app/: Main.hs
cavefish-server/cavefish/src/cavefish-tests/: cavefish-tests.cabal
cavefish-server/cavefish/src/cavefish-tests/test/Test/: Common.hs
cavefish-server/cavefish/test/: Main.hs  Spec.hs
cavefish-server/cavefish/test/Core/: CborSpec.hs
cavefish-server/cavefish/test/Test/: Common.hs
cavefish-server/cavefish/tests/: CHANGELOG.md  README.md  cavefish-tests.cabal
cavefish-server/cavefish/tests/test/: Main.hs  Spec.hs
cavefish-server/cavefish/tests/test/Adapter/Cavefish/: Client.hs
cavefish-server/cavefish/tests/test/Cavefish/: Nominal.hs
cavefish-server/cavefish/tests/test/Core/: CborSpec.hs
cavefish-server/cavefish/tests/test/Test/: Common.hs
cavefish-server/wbps/: CHANGELOG.md  wbps.cabal
cavefish-server/wbps/inputs/relation/: BuildCommitment.sym  relation.r1cs  witness_gen.wasm
cavefish-server/wbps/inputs/setup/: powersOfTauPrepared.ptau
cavefish-server/wbps/lib/: WBPS.hs
cavefish-server/wbps/lib/WBPS/: Commitment.hs  Core.hs  Registration.hs  WBPS.hs
cavefish-server/wbps/lib/WBPS/Adapter/: Data.hs  Path.hs
cavefish-server/wbps/lib/WBPS/Adapter/CardanoCryptoClass/: Crypto.hs
cavefish-server/wbps/lib/WBPS/Adapter/Data/: Aeson.hs  ByteString.hs  Word8.hs
cavefish-server/wbps/lib/WBPS/Adapter/Math/: AffinePoint.hs  Integer.hs
cavefish-server/wbps/lib/WBPS/Adapter/Monad/: Control.hs
cavefish-server/wbps/lib/WBPS/Core/: BuildChallenge.hs  BuildCommitment.hs  Failure.hs  FileScheme.hs
cavefish-server/wbps/lib/WBPS/Core/Cardano/: Cbor.hs  TxAbs.hs  UnsignedTx.hs
cavefish-server/wbps/lib/WBPS/Core/Commitment/: BuildCommitment.hs  Commitment.hs  Scalars.hs
cavefish-server/wbps/lib/WBPS/Core/Groth16/: Setup.hs
cavefish-server/wbps/lib/WBPS/Core/Keys/: Ed25519.hs  ElGamal.hs
cavefish-server/wbps/lib/WBPS/Core/Primitives/: Circom.hs  Snarkjs.hs  SnarkjsOverFileScheme.hs
cavefish-server/wbps/lib/WBPS/Core/Registration/: Account.hs  FetchAccounts.hs  FileScheme.hs  PublicVerificationContext.hs  Register.hs  Registered.hs  (+1 more)
cavefish-server/wbps/setup/: babyjubjub-keygen  powersOfTauPrepared.ptau
cavefish-server/wbps/setup/commitment/: BuildCommitment.circom  BuildCommitment.r1cs  BuildCommitment.sym
cavefish-server/wbps/setup/commitment/BuildCommitment_js/: BuildCommitment.wasm
cavefish-server/wbps/setup/relation/: relation.circom  relation.r1cs  relation.sym
cavefish-server/wbps/tests/integration/: Main.hs
cavefish-server/wbps/tests/unit/: Main.hs
(+297 files in other folders)
