cabal-version:   3.4
name:            wbps

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.1.0.0
homepage:        https://github.com/input-output-hk/innovation-cavefish
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Henin
maintainer:      mr.henin@gmail.com
category:        Cryptography
build-type:      Simple
extra-doc-files: CHANGELOG.md

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wunused-packages
    -Wmissing-import-lists -threaded

library
  import:          base, project-config
  hs-source-dirs:  lib
  exposed-modules:
    WBPS.Adapter.CardanoCryptoClass.Crypto
    WBPS.Adapter.Data
    WBPS.Adapter.Data.Aeson
    WBPS.Adapter.Data.ByteString
    WBPS.Adapter.Data.Word8
    WBPS.Adapter.Math.AffinePoint
    WBPS.Adapter.Math.Integer
    WBPS.Adapter.Monad.Control
    WBPS.Adapter.Path
    WBPS.Core.Failure
    WBPS.Core.Primitives.Circom
    WBPS.Core.Primitives.Snarkjs
    WBPS.Core.Primitives.SnarkjsOverFileScheme
    WBPS.Core.Registration.Artefacts.Groth16.Setup
    WBPS.Core.Registration.Artefacts.Keys.Ed25519
    WBPS.Core.Registration.Artefacts.Keys.ElGamal
    WBPS.Core.Registration.FetchAccounts
    WBPS.Core.Registration.FileScheme
    WBPS.Core.Registration.FileScheme.Directories
    WBPS.Core.Registration.Register
    WBPS.Core.Registration.Registered
    WBPS.Core.Registration.SnarkJs.OverFileSchemeAndShh
    WBPS.Core.Registration.SnarkJs.OverShh
    WBPS.Core.Session.BlindSigning.ThetaStatement
    WBPS.Core.Session.Demonstration.Artefacts.Cardano.UnsignedTx
    WBPS.Core.Session.Demonstration.Artefacts.Commitment
    WBPS.Core.Session.Demonstration.Artefacts.Commitment.Build
    WBPS.Core.Session.Demonstration.Artefacts.PreparedMessage
    WBPS.Core.Session.Demonstration.Artefacts.PreparedMessage.Prepare
    WBPS.Core.Session.Demonstration.Artefacts.R
    WBPS.Core.Session.Demonstration.Artefacts.Rho
    WBPS.Core.Session.Demonstration.Artefacts.Scalars
    WBPS.Core.Session.Demonstration.Artefacts.Scalars.Compute
    WBPS.Core.Session.Demonstration.Demonstrate
    WBPS.Core.Session.Demonstration.Demonstrated
    WBPS.Core.Session.FetchSession
    WBPS.Core.Session.FileScheme
    WBPS.Core.Session.FileScheme.Directories
    WBPS.Core.Session.Proving.Artefacts.Challenge
    WBPS.Core.Session.Proving.Artefacts.Proof
    WBPS.Core.Session.Proving.Artefacts.Proof.Generate
    WBPS.Core.Session.Proving.Artefacts.Witness
    WBPS.Core.Session.Proving.Prove
    WBPS.Core.Session.Proving.Proved
    WBPS.Core.Session.Session
    WBPS.Core.Setup.Circuit.FileScheme
    WBPS.Core.Setup.Circuit.Parameters
    WBPS.WBPS

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core   ^>=1.17.0.0
    , containers
    , cooked-validators
    , cryptonite
    , data-default
    , filepath
    , hex-text
    , memory
    , mtl
    , path
    , path-io
    , plutus-ledger
    , plutus-ledger-api
    , process
    , scientific
    , shh
    , text
    , validation
    , vector

test-suite wbps-unit-tests
  import:         base, project-config
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/unit
  main-is:        Main.hs
  ghc-options:    -Wno-unused-packages
  other-modules:
    WBPS.Specs.Core.Keys.Ed25519
    WBPS.Specs.Session.Demonstration.PreparedMessage.Prepare
    WBPS.Specs.Session.Demonstration.Scalars

  build-depends:
    , aeson
    , bytestring
    , mtl
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , wbps

test-suite wbps-integration-tests
  import:         base, project-config
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/integration
  main-is:        Main.hs
  ghc-options:    -Wno-unused-packages
  other-modules:
    WBPS.Specs.Adapter.Fixture
    WBPS.Specs.Adapter.GenCardanoKeys
    WBPS.Specs.Adapter.Test
    WBPS.Specs.NominalCase
    WBPS.Specs.Session.BlindSigning.ThetaStatement
    WBPS.Specs.Session.Demonstration.Commitment.Build

  build-depends:
    , aeson
    , bytestring
    , cardano-crypto-class
    , containers
    , data-default
    , directory
    , filepath
    , mtl
    , path
    , path-io
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , wbps
