cabal-version:   3.4
name:            cavefish-client-backend
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules: ClientBackend.Server
  other-modules:
    ClientBackend.Api
    ClientBackend.App
    ClientBackend.Handlers
    ClientBackend.Helpers
    ClientBackend.Types

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cavefish-client
    , cavefish-core
    , cborg
    , containers
    , cooked-validators
    , crypton
    , data-default
    , memory
    , mtl
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , servant
    , servant-server
    , stm
    , text
    , time
    , transformers
    , wai
    , wai-cors

executable cavefish-client-backend
  import:         base, project-config
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , bytestring
    , cavefish-client-backend
    , cooked-validators
    , crypton
    , stm
    , wai
    , wai-cors
    , warp
