cabal-version:   3.4
name:            cavefish-client-backend
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wunused-packages
    -Wmissing-import-lists

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules: ClientBackend.Server
  other-modules:
    ClientBackend.Api
    ClientBackend.App
    ClientBackend.Handlers
    ClientBackend.Helpers
    ClientBackend.Types

  build-depends:
    , aeson
    , cardano-api
    , cavefish-client
    , cavefish-core
    , cooked-validators
    , crypton
    , memory
    , mtl
    , plutus-ledger
    , plutus-script-utils
    , servant-server
    , text
    , wai
    , wai-cors

executable cavefish-client-backend
  import:         base, project-config
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , cavefish-client-backend
    , warp
