cabal-version:   3.12
name:            cavefish-core
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

flag ide-stub
  description: Use IDE stub for PlutusTx compile (for HLS only)
  default:     False
  manual:      True

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wunused-packages
    -Wmissing-import-lists

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules:
    Adapter.Logging
    Core.Api.Messages
    Core.Api.ServerConfiguration
    Core.Api.ServerContext
    Core.Api.State
    Core.CavefishLogEvent
    Core.Intent
    Core.PaymentProof
    Core.Pke
    Core.Proof
    Core.SP.AskCommitmentProof
    Core.SP.AskSubmission
    Core.SP.DemonstrateCommitment
    Core.SP.FetchAccount
    Core.SP.FetchAccounts
    Core.SP.Register
    Core.TxBuilder

  build-depends:
    , aeson
    , async
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cborg
    , containers
    , contra-tracer
    , cooked-validators
    , crypton
    , data-default
    , exceptions
    , memory
    , monad-time
    , mtl
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , say
    , servant-server
    , stm
    , text
    , time
    , toml-parser
    , wbps

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

test-suite test
  import:         base, project-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Core.IntentSpecs
    Spec

  build-depends:
    , cardano-api
    , cavefish-core
    , hspec
    , text
    , wbps
