cabal-version:   3.12
name:            cavefish-server
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:      config/config.toml

-- extra-source-files:

flag ide-stub
  description: Use IDE stub for PlutusTx compile (for HLS only)
  default:     False
  manual:      True

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wmissing-import-lists

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules:
    Sp.Emulator
    Sp.Middleware
    Sp.Server

  build-depends:
    , bytestring
    , cavefish-core
    , clock
    , cooked-validators
    , http-types
    , path
    , servant
    , servant-server
    , text
    , wai
    , wai-cors
    , wbps

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

executable cavefish-server
  import:          base, project-config
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:   Paths_cavefish_server
  autogen-modules: Paths_cavefish_server
  build-depends:
    , cavefish-core
    , cavefish-server
    , data-default
    , filepath
    , path
    , path-io
    , warp
    , wbps

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

test-suite test
  import:         base, project-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:  Spec
  build-depends:  hspec
